5476.	[security]	It was possible to trigger an assertion failure when
			verifying the response to a TSIG-signed request.
			(CVE-2020-8622) [GL #2028]

5474.	[bug]		dns_rdata_hip_next() failed to return ISC_R_NOMORE
			when it should have. [GL !3880]

5466.	[bug]		Fix RPZ wildcard passthru ignored when a rejection
			file would overwrite a passthru action matching some
			rule in a previously loaded passthru rpz zone.
			[GL #1619]

5465.	[func]		Fallback to built in trust-anchors, managed-keys, or
			trusted-keys if the bindkeys-file (bind.keys) cannot
			be parsed. [GL #1235]

5463.	[bug]		Address potential NULL pointer dereference on out of
			memory in dnstap.c. [GL #2010]

5462.	[bug]		Move LMDB locking from LMDB itself to named. [GL #1976]

	--- 9.11.21 released ---

5458.	[bug]		Prevent a theoretically possible NULL dereference caused
			by a data race between zone_maintenance() and
			dns_zone_setview_helper(). [GL #1627]

5455.	[bug]		named could crash when cleaning dead nodes in
			lib/dns/rbtdb.c that were being reused. [GL #1968]

5447.	[bug]		IPv6 addresses ending in "::" could break YAML
			parsing. A "0" is now appended to such addresses
			in YAML output from dig, mdig, delv, and dnstap-read.
			[GL #1952]

5446.	[bug]		The validator could fail to accept a properly signed
			RRset if an unsupported algorithm appeared earlier in
			the DNSKEY RRset than a supported algorithm. It could
			also stop if it detected a malformed public key.
			[GL #1689]

5440.	[test]		Properly handle missing kyua. [GL #1950]

	--- 9.11.20 released ---

5437.	[bug]		Fix a data race in lib/dns/resolver.c:log_formerr().
			[GL #1808]

5434.	[security]	It was possible to trigger an INSIST in
			lib/dns/rbtdb.c:new_reference() with a particular zone
			content and query patterns. (CVE-2020-8619) [GL #1111]
			[GL #1718]

5433.	[test]		Prevent the resolver system test for change #5395
			(max-recursion-queries) from failing on systems without
			IPv6 support. [GL #1873]
