@@ -1,3 +1,9 @@
+5480.	[security]	When BIND 9 was compiled with native PKCS#11 support, it
+			was possible to trigger an assertion failure in code
+			determining the number of bits in the PKCS#11 RSA public
+			key with a specially crafted packet. (CVE-2020-8623)
+			[GL #2037]
+
 5476.	[security]	It was possible to trigger an assertion failure when
 			verifying the response to a TSIG-signed request.
 			(CVE-2020-8622) [GL #2028]
